// fixe buttons group wrap

--- a/admin-dev/themes/default/css/admin-theme/_admin-forms.sass
+++ b/admin-dev/themes/default/css/admin-theme/_admin-forms.sass
@@ -67,7 +67,7 @@ textarea:focus, input[type="text"]:focus, input[type="password"]:focus, input[ty
 .dropdown-menu
 	text-align: left
 .btn-group-action
-	float: right
+	width: 175px
 	a
 		text-decoration: none
 
